input bug on iphone

--- a/src/components/AuthForm/AuthForm.css
+++ b/src/components/AuthForm/AuthForm.css
@@ -49,15 +49,18 @@
   border-bottom: solid 1px #E8E8E8;
   width: 100%;
   padding: 0;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
-input:not([type=checkbox]):not([type=radio]),
+/* input:not([type=checkbox]):not([type=radio]),
 textarea,
 select {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-}
+} */
 
 .auth-form__input:invalid {
   color: #EE3465;
